Fix btn-icon on iOS

--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -63,6 +63,7 @@
 // -------------------------------------------
 
 .btn-icon {
+    padding: 0;
     position: relative;
     display: inline-block;
     @include hide-text();
